[tool.poetry]
name = "open-source-model-chat"
version = "0.1.0"
description = ""
authors = ["Christopher Keibel <christopher.keibel.90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.44.2"
gradio = "^4.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
